# vitaNativeRender

./: CMakeLists.txt  CMakeSettings.json  README.md  bench_compare.py  psvita-toolchain.cmake
Platform/: PSVITA.cmake
Shaders/: alpha_f.cg  alpha_f.gxp  basic_f.cg  basic_f.gxp  basic_v.cg  basic_v.gxp  clear_f.cg  clear_f.gxp  clear_v.cg  clear_v.gxp  terrainSimple_f.cg  terrainSimple_f.gxp  terrain_f.cg  terrain_f.gxp  terrain_v.cg  terrain_v.gxp  texturedLitInstanced_v.cg  texturedLitInstanced_v.gxp  texturedLit_f.cg  texturedLit_f.gxp  texturedLit_v.cg  texturedLit_v.gxp  texturedScreenLiteral_f.cg  texturedScreenLiteral_f.gxp  texturedScreenLiteral_v.cg  texturedScreenLiteral_v.gxp  textured_f.cg  textured_f.gxp  textured_v.cg  textured_v.gxp
src/: CMakeLists.txt  EMP_Logo.h  EMP_Logo_Alpha.h  benchmark.cpp  benchmark.h  camera.cpp  camera.h  commonUtils.h  light.cpp  light.h  main.cpp  matrix.cpp  matrix.h  memory.cpp  memory.h  terrain.cpp  terrain.h  texture.cpp  texture.h
